Fix: Don't pad the sidebar too much, tweak font-size/weight a bit more

--- a/docs/assets/stylesheet/theme.css
+++ b/docs/assets/stylesheet/theme.css
@@ -429,6 +429,14 @@ body::before {
   font-size: 26px;
   font-weight: 600;
 }
+.md-content h2 {
+  font-size: 24px;
+  font-weight: 600;
+}
+.md-content h3 {
+  font-size: 22px;
+  font-weight: 600;
+}
 
 .md-content .md-icon:active,
 .md-content .md-icon:focus,
@@ -699,6 +707,9 @@ body::before {
   text-decoration: underline;
 }
 
+.esi-sidebar {
+  padding: 0;
+}
 .esi-sidebar-nav {
   padding: 0;
   font-size: 18px;
